# rustmotion

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
.claude/skills/rustmotion/: SKILL.md
.github/workflows/: publish.yaml
examples/: animated.json  codeblock.json  containers.json  glow_wiggle.json  icon_showcase.json  presets_all.json  promo.json  showcase.json  test.json  transitions.json  typewriter.json  wiggle_test.json  with_audio.json
prompts/: gemini.md
src/: macros.rs  main.rs  tui.rs
src/components/: caption.rs  card.rs  codeblock.rs  counter.rs  flex.rs  gif.rs  grid.rs  icon.rs  image.rs  mod.rs  progress.rs  qrcode.rs  shape.rs  stack.rs  svg.rs  text.rs  video.rs
src/encode/: audio.rs  mod.rs  video.rs
src/engine/: animator.rs  codeblock.rs  mod.rs  render_v2.rs  renderer.rs  transition.rs
src/layout/: constraints.rs  flex.rs  grid.rs  mod.rs  stack.rs  tree.rs
src/schema/: animation.rs  mod.rs  video.rs
src/traits/: animatable.rs  backgrounded.rs  bordered.rs  clipped.rs  container.rs  mod.rs  rounded.rs  shadowed.rs  styled.rs  timed.rs  widget.rs
