[package]
name = "rustmotion"
version = "0.1.0"
edition = "2021"
description = "A CLI tool that renders motion design videos from JSON scenarios"
license = "MIT"
repository = "https://github.com/music-soul1-1/rustmotion"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 2D Rendering
skia-safe = "0.82"

# Video encoding
openh264 = "0.6"

# MP4 muxing
minimp4 = { version = "0.1", features = ["aac"] }

# Audio decoding
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg", "flac", "aac"] }

# JSON Schema generation
schemars = "0.8"

# Progress bar
indicatif = "0.17"

# Image encoding (for single-frame PNG export)
image = { version = "0.25", default-features = false, features = ["png"] }

# Parallelism
rayon = "1"

# Error handling
anyhow = "1"
thiserror = "2"
